--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,10 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/custom.css" />
     <script src="/assets/js/jquery-latest.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
+    {% if page.custom_js %} {% for js_file in page.custom_js %}
+    <script src='/assets/js/{{ js_file }}.js' type="text/javascript"></script>
+    {% endfor %} {% endif %}
+    
     <!--    <script src="/chaise/chaise-config.js"></script>
       <script src="/chaise/scripts/vendor/angular.js"></script>
       -->
