redesigning gudmap homepage

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -31,5 +31,23 @@
   </a>
   </div>
 
+  <div>
+    <a href="/assets/img/carousel/N-FEFC-southard-smith-ISH.jpg" class="featured" title="Southard-Smith lab: Mouse urinary system (TS23)">
+    <img src="/assets/img/carousel/N-FEFC-southard-smith-ISH-thumb.jpg"  alt="/id/N-GWR8">
+  </a>
+  </div>
+
+  <div>
+    <a href="/assets/img/carousel/N-FEFC-southard-smith-ISH.jpg" class="featured" title="Southard-Smith lab: Mouse urinary system (TS23)">
+    <img src="/assets/img/carousel/N-FEFC-southard-smith-ISH-thumb.jpg"  alt="/id/N-GWR8">
+  </a>
+  </div>
+
+  <div>
+    <a href="/assets/img/carousel/N-FEFC-southard-smith-ISH.jpg" class="featured" title="Southard-Smith lab: Mouse urinary system (TS23)">
+    <img src="/assets/img/carousel/N-FEFC-southard-smith-ISH-thumb.jpg"  alt="/id/N-GWR8">
+  </a>
+  </div>
+
 
 </div>
