--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1012,7 +1012,8 @@ div.bottom-img img {
 }
 
 .image-carousel .slick-slide img {
-    width: 144px;
+  /*  width: 144px; */
+    width: 269px;
     border: 5px white solid;
 }
 
