fixing some image sizes

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,13 +1,13 @@
 <div class="slider" data-slick='{"dots": true}'>
   <div>
     <a href="/assets/img/carousel/16-WMWC-prostate-mouse-strand.png" class="featured" title="Strand lab (GUDMAP): Mouse: Inset prostate ducts. Keratin 5-Green, CGRP-White, DAPI-Blue">
-    <img src="/assets/img/carousel/16-WMWC-prostate-mouse-strand-thumb.jpg"  alt="/id/17-CKXJ">
+    <img src="/assets/img/carousel/16-WMWC-prostate-mouse-strand-thumb.png"  alt="/id/16-WMWC">
     </a>
   </div>
 
   <div>
     <a href="/assets/img/carousel/anxa2-1-carroll-mouse.jpg" class="featured" title="Carroll lab (RBK): Mouse: Inset prostate ducts. Keratin 5-Green, CGRP-White, DAPI-Blue">
-    <img src="/assets/img/carousel/anxa2-1-carroll-mouse-thumb.jpg"  alt="/id/17-CKXJ">
+    <img src="/assets/img/carousel/anxa2-1-carroll-mouse-thumb.jpg"  alt="/id/anxa2-1">
     </a>
   </div>
   <div>
