--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,12 +23,15 @@
       href="/assets/slick/slick-theme.css"
       />
     <link rel="stylesheet" type="text/css" href="/assets/css/custom.css" />
+    {% if page.custom_css %} {% for css_file in page.custom_css %}
+    <script src='/assets/css/{{ css_file }}.css' type="text/css"></script>
+    {% endfor %} {% endif %}
     <script src="/assets/js/jquery-latest.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
     {% if page.custom_js %} {% for js_file in page.custom_js %}
     <script src='/assets/js/{{ js_file }}.js' type="text/javascript"></script>
     {% endfor %} {% endif %}
-    
+
     <!--    <script src="/chaise/chaise-config.js"></script>
       <script src="/chaise/scripts/vendor/angular.js"></script>
       -->
