another img shuffle, disable colorbox for now

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -15,30 +15,30 @@
     </a>
   </div>
   <div>
-    <a href="/assets/img/carousel/mendelsohn-ISH-N-EJET.jpg" class="featured" title="Mendelsohn lab (GUDMAP): ISH of mouse urinary system (TS21)">
+    <a href="/assets/img/carousel/mendelsohn-ISH-N-EJET.jpg" class="featured" title="Mendelsohn lab (GUDMAP)">
     <img src="/assets/img/carousel/mendelsohn-ISH-N-EJET-thumb.jpg"  alt="/id/N-GPZ8">
   </a>
   </div>
   <div>
-    <a href="/assets/img/carousel/17-CKXJ-southard-smith-ihc.jpg" class="featured" title="Southard-Smith lab (GUDMAP): Mouse: Tomato, Hu C D and CGRP on pelvic ganglion">
+    <a href="/assets/img/carousel/17-CKXJ-southard-smith-ihc.jpg" class="featured" title="Southard-Smith lab (GUDMAP)">
     <img src="/assets/img/carousel/17-CKXJ-southard-smith-ihc-thumb.jpg"  alt="/id/17-CKXJ">
     </a>
   </div>
 
   <div>
-    <a href="/assets/img/carousel/cohn-brightfield-N-FH8T.jpg" class="featured" title="Cohn lab (GUDMAP): genital tubercle of male mouse (TS20)">
+    <a href="/assets/img/carousel/cohn-brightfield-N-FH8T.jpg" class="featured" title="Cohn lab (GUDMAP)">
     <img src="/assets/img/carousel/cohn-brightfield-N-FH8T-thumb.jpg"  alt="/id/N-GXM0">
   </a>
   </div>
 
   <div>
-    <a href="/assets/img/carousel/W-QZTE-vezina-ihc.jpg" class="featured" title="Vezina lab (GUDMAP): Mouse, Blue-DAPI, Green-EYFP (Shh lineage label), Red-UPK (TS26)">
+    <a href="/assets/img/carousel/W-QZTE-vezina-ihc.jpg" class="featured" title="Vezina lab (GUDMAP)">
     <img src="/assets/img/carousel/W-QZTE-vezina-ihc-thumb.jpg"  alt="/id/W-QZT6">
     </a>
   </div>
 
   <div>
-    <a href="/assets/img/carousel/N-FEFC-southard-smith-ISH.jpg" class="featured" title="Southard-Smith lab (GUDMAP): Mouse urinary system (TS23)">
+    <a href="/assets/img/carousel/N-FEFC-southard-smith-ISH.jpg" class="featured" title="Southard-Smith lab (GUDMAP)">
     <img src="/assets/img/carousel/N-FEFC-southard-smith-ISH-thumb.jpg"  alt="/id/N-GWR8">
   </a>
   </div>
