--- a/_layouts/rbk/default.html
+++ b/_layouts/rbk/default.html
@@ -13,7 +13,7 @@
 </div>
 
 		{%- comment -%} {{ content }} {%- endcomment -%}
-		<section class="section-{{page.tag}} container">
+		<section class="section-{{page.tag}} container-fluid" id="content">
 		{% include breadcrumb.html %}
   			<h1 id="{{page.tag}}">{{ page.title }}</h1>
   			<div class="{{page.tag}}-content">
