bug fixes to links and some content

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,11 +1,11 @@
 <div class="slider" data-slick='{"dots": true}'>
   <div>
-    <a href="/assets/img/carousel/16-WMWC-prostate-mouse-strand.png" class="featured" title="Strand lab (GUDMAP): Mouse: Inset prostate ducts. Keratin 5-Green, CGRP-White, DAPI-Blue">
+    <a href="/assets/img/carousel/16-WMWC-prostate-mouse-strand.png" class="featured" title="Strand lab (GUDMAP)">
     <img src="/assets/img/carousel/16-WMWC-prostate-mouse-strand-thumb.png"  alt="/id/16-WMWC">
     </a>
   </div>
   <div>
-    <a href="/assets/img/carousel/N-E03T-little-IHC.jpg" class="featured" title="Little lab (RBK): Adult mouse cortex. Aqp1 protein detected">
+    <a href="/assets/img/carousel/N-E03T-little-IHC.jpg" class="featured" title="Little lab (RBK)">
     <img src="/assets/img/carousel/N-E03T-little-IHC-thumb.jpg"  alt="/id/N-GKW0">
   </a>
   </div>
@@ -15,7 +15,7 @@
   </a>
   </div>
   <div>
-    <a href="/assets/img/carousel/anxa2-1-carroll-mouse.jpg" class="featured" title="Carroll lab (RBK): Mouse: Inset prostate ducts. Keratin 5-Green, CGRP-White, DAPI-Blue">
+    <a href="/assets/img/carousel/anxa2-1-carroll-mouse.jpg" class="featured" title="Carroll lab (RBK)">
     <img src="/assets/img/carousel/anxa2-1-carroll-mouse-thumb.jpg"  alt="/id/anxa2-1">
     </a>
   </div>
