fixes made while checking links

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -5,7 +5,7 @@
     </a>
   </div>
   <div>
-    <a href="/assets/img/carousel/N-E03T-little-IHC.jpg" class="featured" title="Little lab (RBK)">
+    <a href="/assets/img/carousel/N-E03T-little-IHC.jpg" class="featured" title="Little lab (GUDMAP)">
     <img src="/assets/img/carousel/N-E03T-little-IHC-thumb.jpg"  alt="/id/N-GKW0">
   </a>
   </div>
@@ -16,7 +16,7 @@
   </div>
   <div>
     <a href="/assets/img/carousel/anxa2-1-carroll-mouse.jpg" class="featured" title="Carroll lab (RBK)">
-    <img src="/assets/img/carousel/anxa2-1-carroll-mouse-thumb.jpg"  alt="/id/anxa2-1">
+    <img src="/assets/img/carousel/anxa2-1-carroll-mouse-thumb.jpg"  alt="/id/16-WZGW">
     </a>
   </div>
 
