--- a/_layouts/gudmap-sub.html
+++ b/_layouts/gudmap-sub.html
@@ -7,7 +7,7 @@
 			<ul>
 					<li role="presentation"><a href="/gudmap/about/">About</a></li>
 					<li role="presentation"><a href="/gudmap/projects/">Projects</a></li>
-					<li role="presentation"><a href="/gudmap/contact/">Contact Us</a></li>
+					<li role="presentation"><a href="/contact/">Contact</a></li>
 			</ul>
 </div>
 <div class="container" id="content">
