--- a/_layouts/gudmap/projects-groups.html
+++ b/_layouts/gudmap/projects-groups.html
@@ -9,7 +9,7 @@ layout: gudmap/page
 	<ul class="tut-nav nav nav-pills nav-stacked">
 		<li role="presentation" class="dropdown">
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-			GUDMAP4 <span class="caret"></span></a>
+			GUDMAP4</a>
 			<ul class="dropdown-menu">
 				<li><a href="/gudmap/projects/gudmap4/chen-group/">Chen Group</a></li>
 				<li><a href="/gudmap/projects/gudmap4/cohn-group/">Cohn Group</a></li>
@@ -21,7 +21,7 @@ layout: gudmap/page
 		</li>
 		<li role="presentation" class="dropdown">
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-			GUDMAP3 <span class="caret"></span></a>
+			GUDMAP3</a>
 			<ul class="dropdown-menu">
 				<li><a href="/gudmap/projects/gudmap3/cohn-group/">Cohn</a></li>
 	      <li><a href="/gudmap/projects/gudmap3/tissue-repo/">Dhir (Tissue Repo)</a></li>
@@ -38,7 +38,7 @@ layout: gudmap/page
 		</li>
 		<li role="presentation" class="dropdown">
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-			GUDMAP2 <span class="caret"></span></a>
+			GUDMAP2</a>
 			<ul class="dropdown-menu">
 				<li><a href="/gudmap/projects/gudmap2/cohn-group/">Cohn</a></li>
 				<li><a href="/gudmap/projects/gudmap2/edinburgh-group/">Edinburgh Core</a></li>
@@ -49,7 +49,7 @@ layout: gudmap/page
 		</li>
 		<li role="presentation" class="dropdown">
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-			GUDMAP1 <span class="caret"></span></a>
+			GUDMAP1</a>
 			<ul class="dropdown-menu">
 				<li><a href="/gudmap/projects/gudmap1/capel-group/">Capel</a></li>
 	      <li><a href="/gudmap/projects/gudmap1/edinburgh-group/">Edinburgh Core</a></li>
@@ -66,7 +66,7 @@ layout: gudmap/page
 		</li>
 		<li role="presentation" class="dropdown">
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-			nGUDMAP <span class="caret"></span></a>
+			nGUDMAP</a>
 			<ul class="dropdown-menu">
 				<li><a href="/gudmap/projects/ngudmap/ahern-group/">Ahern</a></li>
 				<li><a href="/gudmap/projects/ngudmap/baldock-group/">Baldock</a></li>
