--- a/_includes/carousel-gudmap.html
+++ b/_includes/carousel-gudmap.html
@@ -4,7 +4,11 @@
     <img src="/assets/img/carousel/16-WMWC-prostate-mouse-strand-thumb.png"  alt="/id/16-WMWC">
     </a>
   </div>
-
+  <div>
+    <a href="/assets/img/carousel/N-E03T-little-IHC.jpg" class="featured" title="Little lab (GUDMAP)">
+    <img src="/assets/img/carousel/N-E03T-little-IHC-thumb.jpg"  alt="/id/N-GKW0">
+  </a>
+  </div>
   <div>
     <a href="/assets/img/carousel/mendelsohn-ISH-N-EJET.jpg" class="featured" title="Mendelsohn lab (GUDMAP)">
     <img src="/assets/img/carousel/mendelsohn-ISH-N-EJET-thumb.jpg"  alt="/id/N-GPZ8">
@@ -27,12 +31,6 @@
     <a href="/assets/img/carousel/W-QZTE-vezina-ihc.jpg" class="featured" title="Vezina lab (GUDMAP)">
     <img src="/assets/img/carousel/W-QZTE-vezina-ihc-thumb.jpg"  alt="/id/W-QZT6">
     </a>
-  </div>
-
-  <div>
-    <a href="/assets/img/carousel/N-FEFC-southard-smith-ISH.jpg" class="featured" title="Southard-Smith lab (GUDMAP)">
-    <img src="/assets/img/carousel/N-FEFC-southard-smith-ISH-thumb.jpg"  alt="/id/N-GWR8">
-  </a>
   </div>
 
 </div>
