--- a/_layouts/rbk-sub.html
+++ b/_layouts/rbk-sub.html
@@ -7,7 +7,7 @@
 			<ul>
 					<li role="presentation"><a href="/rebuildingakidney/about/">About</a></li>
 					<li role="presentation"><a href="/rebuildingakidney/projects/">Projects</a></li>
-					<li role="presentation"><a href="/rebuildingakidney/contact/">Contact Us</a></li>
+					<li role="presentation"><a href="/contact/">Contact</a></li>
 			</ul>
 </div>
 
