updating Contact links in subnavs

--- a/_layouts/rbk/default.html
+++ b/_layouts/rbk/default.html
@@ -8,7 +8,7 @@
 					<li role="presentation"><a href="/rebuildingakidney/about/">About</a></li>
 					<li role="presentation"><a href="/rebuildingakidney/projects/">Projects</a></li>
 					<li role="presentation"><a href="/rebuildingakidney/citing/">Citing RBK</a></li>
-					<li role="presentation"><a href="/rebuildingakidney/contact/">Contact RBK</a></li>
+					<li role="presentation"><a href="/contact/">Contact RBK</a></li>
 			</ul>
 </div>
 
