--- a/_layouts/gudmap/default.html
+++ b/_layouts/gudmap/default.html
@@ -8,7 +8,7 @@
 				<li role="presentation"><a href="/gudmap/about/">About</a></li>
 				<li role="presentation"><a href="/gudmap/projects/">Projects</a></li>
 				<li role="presentation"><a href="/gudmap/citing-gudmap/">Citing GUDMAP</a></li>
-				<li role="presentation"><a href="/gudmap/contact/">Contact GUDMAP</a></li>
+				<li role="presentation"><a href="/contact/">Contact GUDMAP</a></li>
 			</ul>
 </div>
 
