adding jekyll-seo-tag gem

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
     <script src='/assets/js/{{ js_file }}.js' type="text/javascript"></script>
     {% endfor %} {% endif %}
 
-  
+
     {% include navbar-dependencies.html %}
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -109,6 +109,7 @@
           >.
       </p>
     </noscript>
+    {% seo %}
   </head>
   <body>
     <div id="wrap">
