--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,15 @@
-{% include header.html %}
-<div class="container" id="content">
-<div class="col-md-12">
-	{% include breadcrumb.html %}
-	
-	<h1>{{ page.title }}</h1>
+{% include header.html %}	
 
+<div id="content" class="container-fluid">
+	<div class="innercontent">
+	{% include breadcrumb.html %}
+	<h1>{{ page.title }}</h1>
 		{{ content }}
+	</div>
+</div>
+		
 
 </div>
 
 {% include footer.html %}
-{%- comment -%} </div> {%- endcomment -%}
 <script type="text/javascript" src="/assets/slick/slick.min.js"></script>
