--- a/assets/css/chaise.css
+++ b/assets/css/chaise.css
@@ -28,8 +28,14 @@
     font-size: 16px;
 }
 
+.navbar-inverse .navbar-nav>div>a:hover,
 .navbar-inverse .navbar-nav>li>a:hover {
-    background-color: rgb(221, 199, 133, .5);
+    background-color: #407CCA;
+}
+
+.navbar-inverse .navbar-nav>.open>a,
+.navbar-inverse .navbar-nav>.show>a {
+    background-color: #080808;
 }
 
 .navbar-inverse .navbar-nav>li>a:visited {
