--- a/assets/css/chaise.css
+++ b/assets/css/chaise.css
@@ -10,6 +10,7 @@
     width: 100%;
     font-size: 16px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    border: 0;
 }
 
 .navbar-inverse {
