--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -689,7 +689,7 @@ div.bottom-img img {
     color: #C1C1C1;
     padding: 10px;
     text-align: center;
-    /*    margin-top: 60px; */
+    margin-top: 50px;
 }
 
 #footer a {
