specifying width to logo container
The width shrank by 47px compared to staging and I can't figure out why. Since this is now live, I'm artificially widening #brand-text.

--- a/assets/css/chaise.css
+++ b/assets/css/chaise.css
@@ -79,7 +79,8 @@ span#brand-text {
     white-space: nowrap;
     overflow: hidden;
     margin-top: -6px;
-    margin-left: 10px
+    margin-left: 10px;
+    width: 142.37px;
 }
 
 .chaise-body span#brand-text,
