--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -493,8 +493,8 @@ ul.posts li time {
 
 .innercontent {
     /*  padding: 20px 10%; */
-    max-width: 1100px;
-    /*    font-size: 1.2em; */
+    max-width: 840px;
+    font-size: 1.2em;
     line-height: 1.5;
     margin: 0 auto;
 }
