--- a/_layouts/gudmap/projects.html
+++ b/_layouts/gudmap/projects.html
@@ -11,7 +11,7 @@ layout: gudmap/projects-groups
 			<div class="pi-section">
 			<div class="pi personnel">
 			<img src="/assets/img/pis/{{page.img}}.jpg" class="left" />
-			<p><strong>{{ page.pi }}</strong> (PI)<br>
+			<p><strong>{{ page.pi }}</strong> (Contact PI)<br>
 				<span class="inst">{{ page.institute }}</span></p>
 				<p style="clear:both"></p>
 			</div>
