--- a/_layouts/gudmap/projects-groups.html
+++ b/_layouts/gudmap/projects-groups.html
@@ -11,11 +11,13 @@ layout: gudmap/page
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 			GUDMAP4</a>
 			<ul class="dropdown-menu">
-				<li><a href="/gudmap/projects/gudmap4/chen-group/">Chen Group</a></li>
+				<li><a href="/gudmap/projects/gudmap4/chen-group/">Chen/Ding Group</a></li>
 				<li><a href="/gudmap/projects/gudmap4/cohn-group/">Cohn Group</a></li>
-				<li><a href="/gudmap/projects/gudmap4/keast-group/">Keast Group</a></li>
-				<li><a href="/gudmap/projects/gudmap4/lee-group/">Byron Lee Group</a></li>
+				<li><a href="/gudmap/projects/gudmap4/keast-group/">Keast/Osborne Group</a></li>
+				<li><a href="/gudmap/projects/gudmap4/lee-group/">Lee/Ting/Wessely Group</a></li>
 	      <li><a href="/gudmap/projects/gudmap4/li-group/">Sean Li Group</a></li>
+				<li><a href="/gudmap/projects/gudmap4/shibata-group/">Shibata Group</a></li>
+				<li><a href="/gudmap/projects/gudmap4/strand-group/">Strand/Vezina Group</a></li>
 			</ul>
 
 		</li>
