updating rbk events

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -144,6 +144,10 @@ a.anchor {
     border-color: ##255F8C;
 }
 
+.center-text {
+  text-align: center;
+}
+
 .lead.announce {
     text-align: center;
     margin-top: 20px;
