taking out potential conflicting css

--- a/assets/css/chaise.css
+++ b/assets/css/chaise.css
@@ -211,7 +211,7 @@ a#login-link {
 }
 
 
-/* ---------- curation status and record status ---------- */
+/* ---------- curation status and record status ----------
 
 .markdown-container table tr {
     background: transparent !important;
@@ -232,7 +232,7 @@ a#login-link {
     padding: 3px 5px !important;
     vertical-align: top;
 }
-
+*/
 
 /* ---------- curation status and record status ---------- */
 
