--- a/assets/css/chaise.css
+++ b/assets/css/chaise.css
@@ -166,22 +166,22 @@ nav.navbar .navbar-nav div.dropdown-menu {
     flex-wrap: wrap;
 }
 
-/* Adjust content below the navbar on homepage */
-.container-fluid#home {
+/* Adjust content below the navbar on homepage - targeted to static pages only */
+.container-fluid#home, .container-fluid#content {
     padding-top: 0px; /* Adjust this value according to your navbar height */
 }
 
 /* Optional: Add a media query for smaller screens */
 @media (max-width: 1179px) {
-    .container-fluid#home {
+    .container-fluid#home, .container-fluid#content {
         padding-top: 45px; /* Adjust this value according to your navbar height when it collapses */
     }
 @media (max-width: 1026px) {
-    .container-fluid#home {
+    .container-fluid#home, .container-fluid#content {
         padding-top: 95px; /* Adjust this value according to your navbar height when it collapses */
     }
 @media (max-width: 991px) {
-    .container-fluid#home {
+    .container-fluid#home, .container-fluid#content {
         padding-top: 335px; /* Adjust this value according to your navbar height when it collapses */
     }
   }
