Fixing news, updating publications, cleanup
And fixes in gudmap minisite to include responsiveness updates for mobile nav

--- a/_layouts/gudmap/default.html
+++ b/_layouts/gudmap/default.html
@@ -1,5 +1,6 @@
 {% include header.html %}
 <link rel="stylesheet" href="/assets/css/gudmap.css">
+<div class="container-fluid" id="gudmap">
 <div class="gudmap-subnav">
 	<a class="gudmap-brand" href="/gudmap/">
         <img alt="gudmap Logo" src="/assets/img/gudmap-logo.svg">
@@ -12,7 +13,7 @@
 			</ul>
 </div>
 
-<div id="content" class="container-fluid">
+<div id="content" class="container-fluid home">
 		{{ content }}
 </div>
 
