--- a/_layouts/gudmap/home.html
+++ b/_layouts/gudmap/home.html
@@ -1,5 +1,6 @@
 {% include header.html %}
 <link rel="stylesheet" href="/assets/css/gudmap.css">
+<div class="container-fluid" id="gudmap">
 <div class="gudmap-subnav">
 	<a class="gudmap-brand" href="/gudmap/">
         <img alt="gudmap Logo" src="/assets/img/gudmap-logo.svg">
@@ -16,8 +17,8 @@
 		{{ content }}
 </div>
 
-
 </div>
+
 {% include footer.html %}
 </div>
 <script type="text/javascript" src="/assets/slick/slick.min.js"></script>
