--- a/_layouts/rbk/default.html
+++ b/_layouts/rbk/default.html
@@ -1,5 +1,6 @@
 {% include header.html %}
 <link rel="stylesheet" href="/assets/css/rbk.css">
+<div class="container-fluid" id="rbk">
 <div class="rbk-subnav">
 	<a class="rbk-brand" href="/rebuildingakidney/">
         <img alt="RBK Logo" src="/assets/img/rbk-logo.png">
@@ -19,11 +20,11 @@
   			<div class="{{page.tag}}-content">
 
 				{{ content }}
-
 			</div>
+
 		</section>
 
-
+</div>
 
 {% include footer.html %}
 
