--- a/_layouts/rbk/home.html
+++ b/_layouts/rbk/home.html
@@ -1,5 +1,6 @@
 {% include header.html %}
 <link rel="stylesheet" href="/assets/css/rbk.css">
+<div class="container-fluid" id="rbk">
 <div class="rbk-subnav">
 	<a class="rbk-brand" href="/rebuildingakidney/">
         <img alt="RBK Logo" src="/assets/img/rbk-logo.png">
@@ -14,7 +15,7 @@
 
 				{{ content }}
 
-
+</div>
 {% include footer.html %}
 
 <script type="text/javascript" src="/assets/slick/slick.min.js"></script>
