--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -75,6 +75,7 @@ h3 {
 #content .news h2 {
     font-size: 20px;
     margin-top: 20px;
+    text-align: left;
 }
 
 #content h3 {
@@ -999,6 +1000,11 @@ div.bottom-img img {
 
 #community a, #shortcuts a, #opps a {
   font-size: 18px;
+}
+
+#rbk.container-fluid, #gudmap.container-fluid {
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 
