--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -192,10 +192,12 @@ p.acknowledgement {
     .container-fluid#home, .container-fluid#content, .container-fluid#gudmap, .container-fluid#rbk {
         padding-top: 45px; /* Adjust this value according to your navbar height when it collapses */
     }
+  }
 @media (max-width: 1026px) {
     .container-fluid#home, .container-fluid#content, .container-fluid#gudmap, .container-fluid#rbk {
         padding-top: 95px; /* Adjust this value according to your navbar height when it collapses */
     }
+  }
 @media (max-width: 991px) {
     .container-fluid#home, .container-fluid#content, .container-fluid#gudmap, .container-fluid#rbk {
         padding-top: 335px; /* Adjust this value according to your navbar height when it collapses */
