fixing some more gudmap pages

--- a/_layouts/gudmap/default.html
+++ b/_layouts/gudmap/default.html
@@ -13,7 +13,7 @@
 			</ul>
 </div>
 
-<div id="content" class="container-fluid home">
+<div id="gud-content" class="container-fluid">
 		{{ content }}
 </div>
 
