--- a/assets/css/gudmap.css
+++ b/assets/css/gudmap.css
@@ -149,10 +149,15 @@ img.navlogo {
     width: 200px;
 }
 
+#gudmap .container-fluid.gudmap-home {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 #whoweare {
     display: inline-block;
     background-color: #ffffff;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     padding-left: 30px;
     padding-right: 30px;
   /*  height: 570px; */
@@ -275,6 +280,12 @@ h3 {
     min-height: auto;
 }
 
+#gudmap.gud-content h2 {
+    font-weight: bold;
+    text-align: left;
+    font-size: 18px;
+}
+
 div#cboxCurrent {
     visibility: hidden;
 }
@@ -333,14 +344,14 @@ div#cboxCurrent {
     font-size: 14px;
 }
 
-#content {
+#gud-content {
     padding-top: 15px;
     padding-bottom: 50px;
     /*width: 80%;*/
     max-width: 1100px;
 }
 
-#content.gudmap-home {
+#gud-content.gudmap-home {
     max-width: 100%;
     padding: 0;
 }
