--- a/assets/css/rbk.css
+++ b/assets/css/rbk.css
@@ -403,12 +403,16 @@ fieldset {
 }
 */
 
-#content {
+#rbk-content {
   padding-top: 15px;
   padding-bottom: 50px;
   max-width: 1100px;
+  margin: 0 auto;
 }
 
+#rbk-content figure img {
+   border: 0px;
+}
 /*
 .container li { padding: 10px 0; }
 */
@@ -997,6 +1001,7 @@ img.pull-left {
 .subproject-sect {
     border-top: 1px solid #ccc;
     padding-top: 10px;
+    min-height: 309px;
 }
 
 .subproject-sect figure {
